# torge

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/cli/: call.rs  clean.rs  mod.rs  trace.rs  tx.rs
src/utils/: abi_decoder.rs  color.rs  contract_resolver.rs  disk_cache.rs  event_formatter.rs  hex_utils.rs  mod.rs  precompiles.rs  rpc_url.rs  selector_resolver.rs  storage_diff.rs  trace_renderer.rs  value_parser.rs
tests/: main.rs
tests/fixtures/: contracts.json  main.json  selectors.json
tests/fixtures/call/: main.json
tests/fixtures/tx/: main.json
