[package]
name = "torge"
version = "0.0.1"
edition = "2021"
description = "CLI tool to produce Foundry-style traces for EVM transactions through `debug_traceTransaction` RPC requests"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
dirs = "6"
alloy-dyn-abi = "1.4.1"
toml = "0.9"
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
serial_test = "3"
tempfile = "3"
