[package]
name = "torge"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "CLI tool to produce Foundry-style traces for EVM transactions through debug_traceTransaction RPC requests"
readme = "README.md"
homepage = "https://github.com/tinom9/torge"
repository = "https://github.com/tinom9/torge"
license = "MIT"
keywords = ["ethereum", "evm", "trace", "debug", "foundry"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = ["tests/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
dirs = "6"
alloy-dyn-abi = "1.4.1"
alloy-json-abi = "1.4.1"
alloy-primitives = "1.4.1"
toml = "0.9"
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"
